--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
 
   </dependencies>
 
@@ -76,7 +81,45 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+          <plugin>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>2.7</version>
+              <executions>
+                  <execution>
+                      <id>copy-fxml-resources</id>
+                      <!-- here the phase you need -->
+                      <phase>validate</phase>
+                      <goals>
+                          <goal>copy-resources</goal>
+                      </goals>
+                      <configuration>
+                          <outputDirectory>${basedir}/target/classes/</outputDirectory>
+                          <resources>
+                              <resource>
+                                  <directory>src/main/java/</directory>
+                                  <filtering>false</filtering>
+                                  <includes>
+                                      <include>**/*.fxml</include>
+                                  </includes>
+                              </resource>
+                          </resources>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
+
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
